tests/errors/sem12.kt
fun foo(x: Int) {}

fun main() {
    foo(1, 2); // too many args
}